--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,7 +1,3 @@
-doctype html
-html.no-js(lang='ru')
-    include _head
-    body
-        include _header
+extends layouts/html.jade
+block content
 
-        include _footer
